--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,12 @@ pyrogram==1.4.16
 python-dotenv
 pyyaml==5.3.1
 requests
+telegraph
+gpytranslate
 speedtest-cli
 spotipy
 tgcrypto
 youtube-search
 youtube-search-python
 yt-dlp
+redis
